Implemented basic navbar functionality

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav>
+	<a href="">home</a>
+	<a href="\events">events</a>
+	<a href="\order">order</a>
+	<a href="\admin">admin</a>
+</nav>
