--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,5 @@
-<p>events works!</p>
+<div *ngFor="let overview of events; let i = index">
+	<app-event-overview
+		[event] = "events[i]"
+	></app-event-overview>
+</div>
