--- a/src/app/event-overview/event-overview.component.html
+++ b/src/app/event-overview/event-overview.component.html
@@ -1,1 +1,10 @@
-<p>event-overview works!</p>
+<div>
+	<div>
+		<p>{{event.startDate.toDateString()}} {{event.title}}</p>
+		<button (click)="isExpanded = !isExpanded">More</button>
+	</div>
+	<app-event-description
+	 *ngIf="isExpanded"
+	 [event]="event"
+	 ></app-event-description>
+</div>
