put child components inside home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<app-home-title></app-home-title>
+<app-home-image-slideshow></app-home-image-slideshow>
+<app-home-info></app-home-info>
+<app-home-board-of-directors></app-home-board-of-directors>
+<app-contact-info></app-contact-info>
