edited home page

--- a/src/app/contact-info/contact-info.component.html
+++ b/src/app/contact-info/contact-info.component.html
@@ -1,1 +1,4 @@
-<p>contact-info works!</p>
+<div>
+<h2> Contact Us: </h2>
+<a href = "mailto: kiwanisnorcalliteracy@gmail.com"> kiwanisnorcalliteracy@gmail.com</a>
+</div>
