added global styling

--- a/src/app/home-info/home-info.component.html
+++ b/src/app/home-info/home-info.component.html
@@ -1,4 +1,4 @@
-
+<div class = "body">
     <h2> About Us:</h2>
 <p>Kiwanis is a global organization of volunteers dedicated to imporving the world one child and one community at a time</p>
 <p> We aim to: <p>
@@ -11,3 +11,4 @@
         </ul>
        </div>
     
+    </div>
