Fixed bugs with bad function calls in events

--- a/src/app/event-overview/event-overview.component.html
+++ b/src/app/event-overview/event-overview.component.html
@@ -1,6 +1,6 @@
 <div>
 	<div>
-		<p>{{event.startDate.toDateString()}} {{event.title}}</p>
+		<p>{{event.startDate.toDateString}} {{event.title}}</p>
 		<button (click)="isExpanded = !isExpanded">
 			{{isExpanded ? "Less" : "More"}}
 		</button>
