--- a/src/app/event-description/event-description.component.html
+++ b/src/app/event-description/event-description.component.html
@@ -4,6 +4,6 @@
 	<p>Will Kiwanis Club of Northern California for Literacy be attending?</p>
 	<p *ngIf="event.isLiteracyClubAttending; else notAttending">yes</p>
 	<ng-template #notAttending>no</ng-template>
-	<p>Start Time: {{event.startDate.toLocaleTimeString()}}</p>
-	<p>End Time: {{event.endDate.toLocaleTimeString()}}</p>
+	<p>Start Time: {{event.startDate.toLocaleTimeString}}</p>
+	<p>End Time: {{event.endDate.toLocaleTimeString}}</p>
 </div>
