--- a/src/app/home-image-slideshow/home-image-slideshow.component.html
+++ b/src/app/home-image-slideshow/home-image-slideshow.component.html
@@ -1,13 +1,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="src\assets\book_handout.png" alt="First slide">
+        <img class="d-block w-75" src="./../../assets/book_handout.png" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="src\assets\Reading_circle.png" alt="Second slide">
+        <img class="d-block w-100" src="./../../assets/Reading_circle.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="src\assets\super.jpg" alt="Third slide">
+        <img class="d-block w-100" src="./../../assets/super.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
