--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,30 +1,26 @@
-<nav>
-	<a href="">home</a>
-	<a href="\events">events</a>
-	<a href="\order">order</a>
-	<a href="\admin">admin</a>
-</nav>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">Navbar</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	  <span class="navbar-toggler-icon"></span>
-	</button>
-  
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-	  <ul class="navbar-nav mr-auto">
-		<li class="nav-item active">
-		  <a class="nav-link" href="">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="\events">Events</a>
-		</li>
-		<li class="nav-item">
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+	<div class="container-fluid">
+		<div class="container">
+			<a class="navbar-brand" href="#">
+			  <img src="./../../assets/KI_Northern California for Literacy_REV.png" alt="Bootstrap" width="208" height="45">
+			</a>
+		  </div>
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		  <li class="nav-item">
+			<a class="nav-link" href="">Home</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="\events">Events</a>
+		  </li>
+		  <li class="nav-item">
 			<a class="nav-link" href="\order">Book Orders</a>
 		  </li>
-	  </ul>
-	  <form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-	  </form>
+		</ul>
+		<form class="d-flex" role="search">
+		  <button class="btn btn-outline-secondary" type="submit">Admin Login</button>
+		</form>
+	  </div>
 	</div>
   </nav>
