--- a/src/app/home-info/home-info.component.css
+++ b/src/app/home-info/home-info.component.css
@@ -2,5 +2,18 @@
     tab-size: 8;
 }
 .body{
-    width: 80%
+    background-color: #013d6a ;
+    color: white;
+    
+    
+}
+
+.container{
+    display: block;
+    
+    max-width: 50%;
+    margin: auto;
+}
+h2{
+    text-align: center;
 }
