--- a/src/app/home-info/home-info.component.html
+++ b/src/app/home-info/home-info.component.html
@@ -1,14 +1,77 @@
-<div class = "body">
-    <h2> About Us:</h2>
-<p>Kiwanis is a global organization of volunteers dedicated to imporving the world one child and one community at a time</p>
-<p> We aim to: <p>
-    <div class = "goals">
-        <ul>
-            <li>Change children's lives</li>
-            <li>Improve our community</li>
-            <li>Advocate for the importance of Literacy</li>
-            <li>Give quality books to children at no cost</li>
-        </ul>
-       </div>
-    
+<div class="body">
+    <div class="text">
+        <h2> About Us</h2>
+
+
     </div>
+    <div class="container">
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h5 class="mb-0">
+                        <button class="btn btn-light collapsed" data-toggle="collapse" data-target="#collapseOne"
+                        aria-expanded="false" aria-controls="collapseOne">
+                        Kiwanis International
+                    </button>
+                    </h5>
+                </div>
+
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body">
+                        Kiwanis International is a global community of clubs, members and partners dedicated to
+                        improving
+                        the lives of children one community at a time. Today, we stand with more than 550,000 members
+                        from
+                        K-Kids to Key Club to Kiwanis and many ages in between in 80 countries and geographic areas.
+                        Each
+                        community has different needs, and Kiwanis empowers members to pursue creative ways to serve the
+                        needs of children, such as fighting hunger, improving literacy and offering guidance.
+
+                        Kiwanis clubs host nearly 150,000 service projects each year.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="headingTwo">
+                    <h5 class="mb-0">
+                        <button class="btn btn-light collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                            aria-expanded="false" aria-controls="collapseTwo">
+                            Our Chapter
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                        We aim to service communites within northern California. We aim to build the lives of kids
+                        by bringing books to schools and communites. Our goal is to support book drives,
+                        provide literacy learning support, and increase literacy awareness throughout northern
+                        California.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="headingThree">
+                    <h5 class="mb-0">
+                        <button class="btn btn-light collapsed" data-toggle="collapse" data-target="#collapseThree"
+                            aria-expanded="false" aria-controls="collapseThree">
+                            How you can become involved
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                    <div class="card-body">
+                        <ul>
+                            <li>Attend club meetings</li>
+                            <li>Participate in service and fundraising projects</li>
+                            <li>Attend Division Council Meetings</li>
+                            <li>Participate in Interclub meetings</li>
+                            <li>Serve on committees, plan projects</li>
+                            <li>Run for office</li>
+                            <li>Spread the word about Kiwanis</li>
+                          </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
