--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class = "body">
-<nav class="navbar navbar-expand-lg navbarlight" style="background-color: #013d6a;">
+<nav class="navbar navbar-expand-sm navbarlight" style="background-color: #013d6a;">
 	<div class="container-fluid">
 		<div class="container">
 			<a class="navbar-brand" href="#">
