--- a/src/app/contact-info/contact-info.component.css
+++ b/src/app/contact-info/contact-info.component.css
@@ -5,6 +5,9 @@
     text-align: center;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .right{
