--- a/src/app/home-board-of-directors/home-board-of-directors.component.html
+++ b/src/app/home-board-of-directors/home-board-of-directors.component.html
@@ -1,1 +1,41 @@
-<p>home-board-of-directors works!</p>
+<div class="body">
+    <div class="row">
+        <div class="col">
+            <div class="card h-100" style="width: 18rem;">
+                <img class="card-img-top" src="./../../assets/Webster.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">President</h5>
+                    <p class="card-text">Antwon Webster</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100" style="width: 18rem;">
+                <img class="card-img-top" src="./../../assets/coomber.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Secretary</h5>
+                    <p class="card-text">Gina Coomber</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100" style="width: 18rem;">
+                <img class="card-img-top" src="./../../assets/saunders.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Treasurer</h5>
+                    <p class="card-text">Jacqui Saunders</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100" style="width: 18rem;">
+                <img class="card-img-top" src="./../../assets/young.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Former President</h5>
+                    <p class="card-text">Katie Young</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
