--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,27 +1,34 @@
-<div class = "body">
-<nav class="navbar navbar-expand-sm navbarlight" style="background-color: #013d6a;">
-	<div class="container-fluid">
+<div class="body">
+
+
+	<nav id="navbar" class="navbar sticky-top navbar-expand-sm" style="background-color: #013d6a;">
 		<div class="container">
 			<a class="navbar-brand" href="#">
-			  <img src="./../../assets/KI_Northern California for Literacy_REV.png" alt="Bootstrap" width="208" height="45">
+				<img src="./../../assets/KI_Northern California for Literacy_REV.png" alt="Bootstrap" width="208"
+					height="45">
 			</a>
-		  </div>
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		  <li class="nav-item">
-			<a class="nav-link" href="">Home</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="\events">Events</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="\order">Book Orders</a>
-		  </li>
-		</ul>
-		<form class="d-flex" role="search">
-		  <button class="btn btn-outline-secondary" type="submit">Admin Login</button>
-		</form>
-	  </div>
-	</div>
-  </nav>
-  </div>
+		
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+				<li class="nav-item">
+					<a class="nav-link" href="">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="\events">Events</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="\order">Book Orders</a>
+				</li>
+				<li>
+					<a class="nav-link" href="#">Admin Login</a>
+				</li>
+			</ul>
+
+		</div>
+	</nav>
+</div>
