--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,7 +1,10 @@
 .body{
-	min-height: 100vh;
+	background-color: var(--primary);
+	padding: 1rem;
+	min-height: 78vh;
 }
 
 .card {
-	margin: 5rem;
+	margin: 0rem 5rem 1rem 5rem;
+	padding: 1rem;
 }
