--- a/src/app/event-description/event-description.component.html
+++ b/src/app/event-description/event-description.component.html
@@ -5,6 +5,6 @@
 	<b class="col">Will Kiwanis Club of Northern California for Literacy be attending?<br></b>
 	<p class="tab" *ngIf="event.isLiteracyClubAttending; else notAttending">yes</p>
 	<ng-template class="tab"#notAttending>no<br><br></ng-template>
-	<p>Start Time: {{event.startDate.toLocaleTimeString()}}</p>
-	<p>End Time: {{event.endDate.toLocaleTimeString()}}</p>
+	<p><b>Start Time:</b> {{event.startDate.toLocaleTimeString()}}</p>
+	<p><b>End Time:</b> {{event.endDate.toLocaleTimeString()}}</p>
 </div>
