Squashed commit of the following:
commit 211bcc20fd3ed0742ad8f9e9fe3ef052e359f6d0
Merge: 6f84d70 aaeec5d
Author: Milksoplimit <104238125+Milksoplimit@users.noreply.github.com>
Date:   Wed May 3 16:25:09 2023 -0500

    Merge branch 'origin/bookorders' of https://github.com/wsoksoda/Kiwanis-Club-of-Northern-California-for-Literacy into origin/bookorders

commit 6f84d705415aa0f219329e4e6bf33a59d03c6a78
Author: Milksoplimit <104238125+Milksoplimit@users.noreply.github.com>
Date:   Wed May 3 16:24:59 2023 -0500

    Finished Orders

commit aaeec5d52089fbce9b29e85aadc42167e9335905
Author: wsoksoda <75330996+wsoksoda@users.noreply.github.com>
Date:   Wed May 3 16:03:02 2023 -0500

    admin page completed

commit 706a62181385def4a502b2cde6c538138ca7fecc
Merge: 7122e10 50591fa
Author: wsoksoda <75330996+wsoksoda@users.noreply.github.com>
Date:   Wed May 3 15:45:20 2023 -0500

    Merge branch 'origin/bookorders' of https://github.com/wsoksoda/Kiwanis-Club-of-Northern-California-for-Literacy into origin/bookorders

commit 7122e10349cd82474641aa2c3048f54b200b4103
Author: wsoksoda <75330996+wsoksoda@users.noreply.github.com>
Date:   Wed May 3 15:45:05 2023 -0500

    added delete button for admin order

commit 50591fa863b319cec698f4dda1ce00772282b766
Merge: 9e82ad6 7128151
Author: Milksoplimit <104238125+Milksoplimit@users.noreply.github.com>
Date:   Wed May 3 15:43:25 2023 -0500

    Merge branch 'origin/bookorders' of https://github.com/wsoksoda/Kiwanis-Club-of-Northern-California-for-Literacy into origin/bookorders

commit 9e82ad6d4ca39fdbfb42f3ce55922d6d6b336b36
Author: Milksoplimit <104238125+Milksoplimit@users.noreply.github.com>
Date:   Wed May 3 15:43:14 2023 -0500

    Added numBooks and Email

commit 712815102fd105a90f3365efec3bdc69b092caf6
Author: wsoksoda <75330996+wsoksoda@users.noreply.github.com>
Date:   Wed May 3 15:39:48 2023 -0500

    added go back on admin-events

commit f07f93ad24b6632e4367ff9974e3dd9de11db9b5
Author: wsoksoda <75330996+wsoksoda@users.nor

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,4 @@
-<p>admin works!</p>
+<div class="body">
+    <app-admin-event></app-admin-event>
+    <app-admin-order-list></app-admin-order-list>
+</div>
