--- a/src/app/home-board-of-directors/home-board-of-directors.component.html
+++ b/src/app/home-board-of-directors/home-board-of-directors.component.html
@@ -1,4 +1,6 @@
 <div class="body">
+    <h2>Board of Directors</h2>
+    <br/>
     <div class="row">
         <div class="col">
             <div class="card h-100" style="width: 18rem;">
