--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
 					<a class="nav-link" href="\order">Book Orders</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Admin Login</a>
+					<a class="nav-link" href="\admin-login">Admin Login</a>
 				</li>
 			</ul>
 
