--- a/src/app/admin-event-info/admin-event-info.component.html
+++ b/src/app/admin-event-info/admin-event-info.component.html
@@ -16,18 +16,18 @@
                 <input type="tel" class="form-control" id="address" [(ngModel)]="event!.address" [ngModelOptions]="{ standalone: true }">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">isLiteracyClubAttending (Yes/No)</label>
-                <input type="email" class="form-control" id="attending" [(ngModel)]="event!.isLiteracyClubAttending" [ngModelOptions]="{ standalone: true }">
+                <label for="exampleInputPassword1">isLiteracyClubAttending</label>
+                <input type="checkbox" id="attending" [(ngModel)]="event!.isLiteracyClubAttending" [ngModelOptions]="{ standalone: true }">
             </div>
             <div class="row mt-3">
                 <div class="col">
                     <div class="form-group">
-                        <input type="date" id="start" [(ngModel)]="event!.startDate" [ngModelOptions]="{ standalone: true }">
+                        <input type="datetime-local" [ngModel] ="event!.startDate | date:'yyyy-MM-dd hh:mm'" (ngModelChange)="event!.startDate = $event" [ngModelOptions]="{ standalone: true}">
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <input type="date" id="end" [(ngModel)]="event!.endDate" [ngModelOptions]="{ standalone: true }">
+                        <input type="datetime-local" [ngModel] ="event!.endDate | date:'yyyy-MM-dd hh:mm'" (ngModelChange)="event!.endDate = $event" [ngModelOptions]="{ standalone: true}">
                     </div>
                 </div>
             </div>
