--- a/src/app/admin-event/admin-event.component.css
+++ b/src/app/admin-event/admin-event.component.css
@@ -12,3 +12,8 @@
 	background-color: var(--secondary);
 	border-color: var(--secondary);
 }
+
+h2{
+	text-align: center;
+    color: var(--secondary)
+}
