--- a/src/app/admin-event/admin-event.component.html
+++ b/src/app/admin-event/admin-event.component.html
@@ -1,4 +1,5 @@
 <div class="body">
+    <h2> Events </h2>
     <div class="card" *ngFor="let overview of events; let i = index">
         <app-event-overview [event]="events[i]"></app-event-overview>
 
