--- a/src/app/admin-order-list/admin-order-list.component.css
+++ b/src/app/admin-order-list/admin-order-list.component.css
@@ -1,4 +1,13 @@
-.card{
+.card {
     margin: 0rem 5rem 1rem 5rem;
-	padding: 1rem;
+    padding: 1rem;
+}
+
+h2 {
+    text-align: center;
+    color: var(--secondary);
+}
+
+hr{
+    color: var(--secondary);
 }
