--- a/src/app/admin-event-info/admin-event-info.component.html
+++ b/src/app/admin-event-info/admin-event-info.component.html
@@ -16,7 +16,7 @@
                 <input type="tel" class="form-control" id="address" [(ngModel)]="event!.address" [ngModelOptions]="{ standalone: true }">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">isLiteracyClubAttending</label>
+                <label for="exampleInputPassword1">Literacy Club Attendance:</label>
                 <input type="checkbox" id="attending" [(ngModel)]="event!.isLiteracyClubAttending" [ngModelOptions]="{ standalone: true }">
             </div>
             <div class="row mt-3">
